# quickshell-configs

./: .gitignore  2  :w  AiBackend.qml  AiHelper.qml  AnimationDemo.qml  AppLauncher.qml  BluetoothPanel.qml  CPUUsage.qml  CalenderApp.qml  Checking.qml  CircularProgressIndicator.qml  Clock_test.qml  CubeTest.qml  CustomSlider.qml  Dashboard.qml  DashboardSection_1.qml  DashboardSection_2.qml  Dock.qml  DockAppIcons.qml  FuzzySearch.qml  IconUtils.qml  InputTest.qml  LiquidGlassDemo.qml  MangaDownloader.qml  MangaReader.qml  MiddleRect.qml  MonitorPopup.qml  MusicVis.qml  NewLayout.qml  NewLockScreen.qml  NewMusicPlayer.qml  NotificationManager.qml  NotificationPanel.qml  NotificationServer.qml  Panel.qml  PopupWin.qml  PowerPanel.qml  RAMUsage.qml  README.md  (+25 more)
assets/: next.vg
meshes/: node10_Black_0_mesh.mesh  node10_Red_0_mesh.mesh  node10_White_0_mesh.mesh  node11_Black_0_mesh.mesh  node11_Green_0_mesh.mesh  node11_Red_0_mesh.mesh  node11_White_0_mesh.mesh  node12_Black_0_mesh.mesh  node12_Blue_0_mesh.mesh  node12_Orange_0_mesh.mesh  node12_White_0_mesh.mesh  node13_Black_0_mesh.mesh  node13_Orange_0_mesh.mesh  node13_White_0_mesh.mesh  node14_Black_0_mesh.mesh  node14_Green_0_mesh.mesh  node14_Orange_0_mesh.mesh  node14_White_0_mesh.mesh  node15_Black_0_mesh.mesh  node15_Blue_0_mesh.mesh  node15_White_0_mesh.mesh  node16_Black_0_mesh.mesh  node16_Blue_0_mesh.mesh  node17_Black_0_mesh.mesh  node17_Blue_0_mesh.mesh  node17_Red_0_mesh.mesh  node17_White_0_mesh.mesh  node18_Black_0_mesh.mesh  (+53 more)
plugins/WfRecorder/: CMakeLists.txt  build.sh  wfrecorder.cpp  wfrecorder.h
(+237 files in other folders)
